--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -3,4 +3,13 @@
   position: relative;
   color: white;
   padding: 10px;
+  background-size: cover !important;
+  background-position: center;
+}
+
+.deco-none {
+  background-color: transparent;
+  border: none;
+  margin: 0;
+  padding: 0;
 }
