footer nav started

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,8 @@
     <% else %>
       <% nav_class =  "default-navbar"%>
     <% end %>
-    <%= render 'shared/navbar', nav_class: nav_class %>
-    <%= render 'shared/flashes' %>
     <%= yield %>
+    <%= render 'shared/footer' %>
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
     <%= yield(:after_js) %>
