search bar issue fixed

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -48,6 +48,6 @@ position: absolute;
 padding: 125px 10px;
 }
 
-#home-input {
-  border-radius: 25px;
-}
+// #home-input {
+//   border-radius: 25px;
+// }
