made edits to show page

--- a/app/assets/stylesheets/recipes/_recipes_show.scss
+++ b/app/assets/stylesheets/recipes/_recipes_show.scss
@@ -15,4 +15,11 @@
   color: black;
 }
 
+.recipe-card-category {
+  position: absolute;
+  left: 10px;
+  font-size: 15px;
+  text-transform: uppercase;
+  top: 230px;
+}
 
