home page now index

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,7 +1,7 @@
 <% content_for(:title, 'Larder\'s recipes') %>
 
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= asset_path 'larder-banner.png' %>);">
-  <div class="banner-content">
+  <div class="banner-content gradient">
     <h1>Larder</h1>
     <h3>Eat more. Waste Less</h3>
     <p>What ingredients do you have?</p>
