--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,6 +1,7 @@
 .banner {
   text-align: center;
-  height: calc(100vh - 70px);  /* if you have a 70px navbar => height: calc(100vh - 70px); */
+  // height: calc(100vh - 70px); /* if you have a 70px navbar => height: calc(100vh - 70px); */
+  height: 426px;
   background-size: cover !important;
   background-position: center;
   background-repeat: no-repeat;
@@ -43,6 +44,7 @@ background: -webkit-linear-gradient(top, rgba(37,36,53,0) 0%,rgba(37,36,53,0.62)
 background: linear-gradient(to bottom, rgba(37,36,53,0) 0%,rgba(37,36,53,0.62) 41%,rgba(37,36,53,0.64) 42%,rgba(37,36,53,0.9) 67%,rgba(37,36,53,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00252435', endColorstr='#252435',GradientType=0 ); /* IE6-9 */
 height: 426px;
+// height: calc(100vh - 70px);
 width: 100%;
 position: absolute;
 padding: 125px 10px;
