--- a/app/views/recipes/_recipe_card.html.erb
+++ b/app/views/recipes/_recipe_card.html.erb
@@ -1,4 +1,4 @@
-<div class="col-xs-12 col-sm-6 col-lg-4">
+<div class="col-xs-12 col-sm-6 col-lg-4 index-card">
   <%= link_to recipe_path(recipe) do %>
     <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= cl_image_path(recipe.photo? ? recipe.photo : 'https://kitt.lewagon.com/placeholder/cities/shanghai') %>');">
       <div class="card-category">
