--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -2,9 +2,12 @@
 
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= asset_path 'larder-banner.png' %>);">
   <div class="banner-content gradient">
+    <div class="logo">
+      <%= image_tag('Larder-icon-logo.svg', size: "50x50", alt: "Logo") %>
+    </div>
     <h1>Larder</h1>
     <h3>Eat more. Waste Less</h3>
-    <p>What ingredients do you have?</p>
+    <p>Which ingredients do you have?</p>
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
