devise fix and dashboard

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,25 +1,18 @@
 <% content_for(:title, 'My Larder') %>
 
 <div class="wrapper">
-  <div class="tabs">
-    <a class="tab active" id="tab-favourite" href="#">
-      <h3><%= Favourite.count %></h3>
+  <div class="tbs">
+    <a class="tb active" id="tb-favourite" href="#">
       <p>Favourites</p>
     </a>
-    <a class="tab" id="tab-recipe" href="#">
-      <h3><%= User.name %></h3>
+    <a class="tb" id="tb-recipe" href="#">
       <p>Your recipes</p>
-    </a>
-    <a class="tab" href="#">
-      <h3>456</h3>
-      <p>Your preferences</p>
     </a>
   </div>
 
   <div class="container" id="cont-favourite">
     <div class="row">
       <div class="col-xs-12 col-lg-12 offset-lg-1">
-        <h3><span>Your Favourites</span></h3>
         <% @recipes.each do |recipe| %>
           <div class="product">
             <%= cl_image_tag recipe.photo, class:"product-image hidden-xs" %>
@@ -35,7 +28,6 @@
                 <% end %>
               </ul>
               <%= link_to '', recipe_path(recipe), class: 'food-card-link' %>
-<!-- WHAT IS THIS LINK TO??? -->
           </div>
         <% end %>
       </div>
@@ -46,22 +38,25 @@
     <div class="row">
       <div class="col-xs-12 col-lg-12 offset-lg-1">
         <h3>My Recipes</h3>
+        <%= link_to new_recipe_path do %>
+            <i class="fa fa-plus-square" aria-hidden="true"></i> Add your own recipe
+        <% end %>
         <% @user.recipes.each do |recipe| %>
-        <div class="product">
-          <%= cl_image_tag recipe.photo, class:"product-image hidden-xs" %>
-          <div class='product-body'>
-            <h3><%= recipe.name %></h3>
-            <p><%= recipe.description %></p>
+          <div class="product">
+            <%= cl_image_tag recipe.photo, class:"product-image hidden-xs" %>
+            <div class='product-body'>
+              <h3><%= recipe.name %></h3>
+              <p><%= recipe.description %></p>
+            </div>
+            <ul class="list-inline product-controls hidden-sm hidden-xs">
+              <li><%= image_tag('hourglass.svg', size: "20x20", alt: 'duration' ) %> <%= recipe.duration %></li>
+              <li><%= image_tag('cutlery.svg', size: "20x20", alt: 'cutlery') %> <%= recipe.servings %></li>
+              <li><%= link_to recipe_path(recipe), method: :delete, data: { confirm: 'Are you sure?'} do %>
+                <i class="fa fa-trash-o" aria-hidden="true"></i>
+              <% end %></li>
+            </ul>
+            <%= link_to '', recipe_path(recipe), class: 'food-card-link' %>
           </div>
-          <ul class="list-inline product-controls hidden-sm hidden-xs">
-            <li><%= image_tag('hourglass.svg', size: "20x20", alt: 'duration' ) %> <%= recipe.duration %></li>
-            <li><%= image_tag('cutlery.svg', size: "20x20", alt: 'cutlery') %> <%= recipe.servings %></li>
-            <li><%= link_to recipe_path(recipe), method: :delete, data: { confirm: 'Are you sure?'} do %>
-              <i class="fa fa-trash-o" aria-hidden="true"></i>
-            <% end %></li>
-          </ul>
-          <%= link_to '', recipe_path(recipe), class: 'food-card-link' %>
-        </div>
         <% end %>
       </div>
     </div>
@@ -71,8 +66,8 @@
 <script>
   let favourite = document.getElementById('cont-favourite');
   let recipe = document.getElementById('cont-recipe');
-  let tabFav = document.getElementById('tab-favourite');
-  let tabRecipe = document.getElementById('tab-recipe');
+  let tabFav = document.getElementById('tb-favourite');
+  let tabRecipe = document.getElementById('tb-recipe');
 
   tabFav.addEventListener("click", () => {
     favourite.classList.add("show");
@@ -81,7 +76,6 @@
     recipe.classList.add('hidden');
     tabFav.classList.add("active");
     tabRecipe.classList.remove("active");
-
   });
 
   tabRecipe.addEventListener('click', () => {
