--- a/app/assets/stylesheets/components/_tabs.scss
+++ b/app/assets/stylesheets/components/_tabs.scss
@@ -1,48 +1,47 @@
-.tabs {
+.tbs {
   background: $light-gray;
   display: flex;
   justify-content: center;
   padding: 10px 10px 0 10px
 }
-.tabs a {
+.tbs a {
   color: white;
 }
-.tabs a:hover {
+.tbs a:hover {
   cursor: pointer;
   text-decoration: none;
   opacity: 0.8;
 }
-.tabs h3 {
+.tbs h3 {
   font-size: 17px;
   font-weight: 400;
   margin-top: 0;
-  color: $larder-green-primary
+  color: $larder-green-primary;
 }
-.tabs p {
+.tbs p {
   opacity: 0.5;
   margin-bottom: 0;
-  color: $larder-green-primary
+  color: $larder-green-lighter;
 }
-.tab {
-  background: white;
-  flex: 0 0 25%;
+.tb {
+  background: $larder-green-darker;
+  flex: 0 0 40%;
   text-align: center;
   padding: 20px 0;
 }
-.tab:first-child {
+.tb:first-child {
   border-radius: 10px 0 0 0;
 }
-.tab:last-child {
+.tb:last-child {
   border-radius: 0 10px 0 0;
 }
-.tab.active {
+.tb.active {
   background: white;
   color: black;
   border-bottom: 2px solid $larder-green-primary;
   // border-bottom: opacity: 0.4;
 }
-
-.tab:hover {
+.tb:hover {
   border-bottom: 2px solid $larder-green-primary;
   transition: 0.2s;
 }
