--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -13,13 +13,19 @@
     </div>
 
     <div class="card-favourite">
-      <% if @favourite_recipes_id.include?(@recipe.id) %>
-          <%= link_to favourite_path(current_user.favourite_for(@recipe)), method: :delete do %>
-            <%= image_tag("full-star.png", size: "30x30", alt: "Favourited") %>
+      <% if user_signed_in? %>
+        <% if current_user.favourites.include?(@recipe) %>
+            <%= link_to favourite_path(current_user.favourite_for(@recipe)), method: :delete do %>
+              <%= image_tag("full-star.png", size: "30x30", alt: "Favourited") %>
+            <% end %>
+        <% else %>
+          <% if @recipe != current_user.favourite_for(@recipe)&.recipe %>
+            <%= render 'favourites/form_favourites' %>
           <% end %>
+        <% end %>
       <% else %>
-        <% if @recipe != current_user.favourite_for(@recipe)&.recipe %>
-          <%= render 'favourites/form_favourites' %>
+        <%= link_to new_user_session_path do %>
+          <%= image_tag("empty-star.png", size: "30x30", alt: "Add to favourite") %>
         <% end %>
       <% end %>
     </div>
