--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -15,6 +15,7 @@ $card-margin-top: 20px;
   position: relative;
   justify-content: center;
   align-items: center;
+
 }
 .card:hover {
   box-shadow: 0 16px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
@@ -29,12 +30,12 @@ $card-margin-top: 20px;
 }
 
 .card-servings {
-  position: absolute;
-  left: 10px;
-  bottom: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    font-size: 15px;
+    text-transform: uppercase;
+    font-weight: lighter;
 }
 .card-servings .cut {
   margin-right: 5px;
@@ -42,8 +43,10 @@ $card-margin-top: 20px;
 
 .card-duration {
   position: absolute;
-  right: 10px;
-  bottom: 10px;
+    left: 70px;
+    font-size: 15px;
+    bottom: 10px;
+    font-weight: lighter;
 }
 .dashboard-card {
   height: 100px;
@@ -62,10 +65,11 @@ $card-margin-top: 20px;
 }
 .card-category {
   position: absolute;
-  top: 10px;
+  bottom: 50px;
   left: 10px;
-  font-size: 15px;
+  font-size: 20px;
   text-transform: uppercase;
+  font-weight: lighter;
 }
 .card-description {
   position: absolute;
