Added sticky footer

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,10 +5,10 @@
     <%= link_to "/dashboard", class: "footer-star-icon" do %>
     <%= image_tag "empty-star.png" %>
     <% end %>
-    <%= link_to "/dashboard", class: "footer-recipe-icon" do %>
-    <%= image_tag "cooking.svg" %>
+    <%= link_to root_path, class: "footer-recipe-icon" do %>
+    <%= image_tag "Larder-icon-logo.svg" %>
     <% end %>
-    <%= link_to "/dashboard", class: "footer-user-icon" do %>
+    <%= link_to "/users/edit", class: "footer-user-icon" do %>
     <%= image_tag "user-white.png" %>
   <% end %>
   </div>
