--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -4,7 +4,10 @@
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  height: 70px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
 }
