changes to the show page with added tabs for method and ingredients

--- a/app/assets/stylesheets/recipes/_recipes_show.scss
+++ b/app/assets/stylesheets/recipes/_recipes_show.scss
@@ -14,6 +14,8 @@
   align-items: center;
   justify-content: center;
   margin-top: 13px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .recipe-method p {
@@ -21,6 +23,15 @@
 }
 
 .recipe-desc h2 {
+  font-size: 30px;
   color: black;
+  margin-left: 10px;
 }
 
+.recipe-card-category {
+  position: absolute;
+  top: 230px;
+  left: 10px;
+  font-size: 15px;
+  text-transform: uppercase;
+}
