--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,5 @@
 @import "components/index";
 @import "pages/index";
 @import "recipes/index";
+@import "ingredients/index";
+@import "method/index"
