save before merge

--- a/app/assets/stylesheets/components/_tabs.scss
+++ b/app/assets/stylesheets/components/_tabs.scss
@@ -37,7 +37,7 @@
 }
 .tb.active {
   background: $light-gray;
-  color: ;
+  color: white;
   border-bottom: 2px solid white;
   // border-bottom: opacity: 0.4;
 }
