made edit to show page font

--- a/app/assets/stylesheets/method/_method.scss
+++ b/app/assets/stylesheets/method/_method.scss
@@ -1,11 +1,11 @@
 .recipe-method h4 {
   font-size: 30px;
-  color: black;
+  color: white;
   margin-left: 10px;
 }
 
 .recipe-method p {
-  color: black;
+  color: white;
   display: flex;
   align-items: center;
   justify-content: center;
