--- a/app/assets/stylesheets/recipes/_recipes_show.scss
+++ b/app/assets/stylesheets/recipes/_recipes_show.scss
@@ -9,7 +9,7 @@
 }
 
 .recipe-desc p {
-  color: black;
+  color: white;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -19,7 +19,7 @@
 }
 
 .recipe-method p {
-  color: black;
+  color: white;
 }
 
 
@@ -32,7 +32,7 @@
 }
 .recipe-desc h2 {
   font-size: 30px;
-  color: black;
+  color: white;
   margin-left: 10px;
 
 }
