--- a/app/assets/stylesheets/ingredients/_ingredients.scss
+++ b/app/assets/stylesheets/ingredients/_ingredients.scss
@@ -3,11 +3,12 @@
   margin-left: 10px;
   margin-top: 11px;
   margin-bottom: 2.5px;
+  color: white;
 }
 
 .ingredient-names h2 {
   font-size: 30px;
-  color: black;
+  color: white;
   margin-left: 10px;
 }
 
