--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -15,12 +15,10 @@ $card-margin-top: 20px;
   position: relative;
   justify-content: center;
   align-items: center;
-
 }
 .card:hover {
   box-shadow: 0 16px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
-
 .card-center {
   height: 30px;
   width: 30px;
@@ -28,7 +26,6 @@ $card-margin-top: 20px;
   // justify-content: center;
   // align-items: center;
 }
-
 .card-servings {
     position: absolute;
     bottom: 10px;
@@ -40,7 +37,6 @@ $card-margin-top: 20px;
 .card-servings .cut {
   margin-right: 5px;
 }
-
 .card-duration {
   position: absolute;
     left: 70px;
@@ -56,12 +52,12 @@ $card-margin-top: 20px;
   color: white;
   position: relative;
   margin-bottom: 5px;
-
 }
 .card-favourite {
   position: absolute;
   right: 10px;
   top: 10px;
+  z-index: 3;
 }
 .card-category {
   position: absolute;
@@ -97,15 +93,12 @@ $card-margin-top: 20px;
 .card-link:hover {
   opacity: 0.1;
 }
-
 .product-image {
   background-size: cover;
 }
-
 .index-card {
   padding: 8px;
 }
-
 .container.cards {
   padding: 8px 8px 52px 8px;
 
