--- a/app/views/recipes/_recipe_card.html.erb
+++ b/app/views/recipes/_recipe_card.html.erb
@@ -1,24 +1,30 @@
 <div class="col-xs-12 col-sm-6 col-lg-4 index-card">
   <%= link_to recipe_path(recipe) do %>
-    <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.8)), url('<%= cl_image_path(recipe.photo? ? recipe.photo : 'https://kitt.lewagon.com/placeholder/cities/shanghai') %>');">
-      <div class="card-category">
-        <%= recipe.name %>
-      </div>
-      <div class="card-servings">
-        <%= image_tag('cutlery.svg', size: "30x30", alt: "Servings", class: "cut") %> <%= recipe.servings %>
-      </div>
-      <div class="card-duration">
-        <%= recipe.duration %>min<%= image_tag('hourglass.svg', size: "30x30", alt: "Duration") %>
-      </div>
-      <% if recipe.favourited?(user) %>
-        <div class="card-favourite">
-          <%= image_tag('full-star.png', size: "30x30", alt: "Favourite") %>
+    <div class="card" style="background-image: url('<%= cl_image_path(recipe.photo? ? recipe.photo : 'https://kitt.lewagon.com/placeholder/cities/shanghai') %>');">
+      <div class="card-gradient">
+        <div class="card-category">
+          <%= recipe.name %>
         </div>
-      <% else %>
-        <div class="card-favourite">
-          <%= image_tag('empty-star.png', size: "30x30", alt: "Favourite") %>
+        <div class="card-info">
+          <div class="card-servings">
+            <%= image_tag('Larder-icon-servings.svg', size: "20x20", alt: "Servings", class: "cut") %> <%= recipe.servings %> servings
+          </div>
+          <div class="card-duration">
+            <%= image_tag('Larder-icon-duration.svg', size: "20x20", alt: "Duration") %><%= recipe.duration %> min
+          </div>
+
         </div>
-      <% end %>
+        <% if recipe.favourited?(user) %>
+          <div class="card-favourite">
+            <%= image_tag('full-star.png', size: "30x30", alt: "Favourite") %>
+          </div>
+        <% else %>
+          <div class="card-favourite">
+            <%= image_tag('empty-star.png', size: "30x30", alt: "Favourite") %>
+          </div>
+        <% end %>
+      </div>
     </div>
   <% end %>
 </div>
+
