--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,8 +5,8 @@
     <%= link_to "/dashboard", class: "footer-star-icon" do %>
     <%= image_tag "empty-star.png" %>
     <% end %>
-    <%= link_to root_path, class: "footer-recipe-icon" do %>
-    <%= image_tag "Larder-icon-logo.svg" %>
+    <%= link_to root_path, class: "footer-mag-icon" do %>
+    <%= image_tag "mag-glass.png" %>
     <% end %>
     <%= link_to "/users/edit", class: "footer-user-icon" do %>
     <%= image_tag "user-white.png" %>
