ajax fav and dry cards

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -12,66 +12,26 @@
 
   <div class="container" id="cont-favourite">
     <div class="row">
-      <div class="col-xs-12 col-sm-6 col-lg-4 index-card">
-        <% @recipes.each do |recipe| %>
-          <%= link_to recipe_path(recipe) do %>
-            <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.8)), url('<%= cl_image_path(recipe.photo? ? recipe.photo : 'https://kitt.lewagon.com/placeholder/cities/shanghai') %>');">
-              <div class="card-category">
-                <%= recipe.name %>
-              </div>
-              <div class="card-servings">
-                <%= image_tag('cutlery.svg', size: "30x30", alt: "Servings", class: "cut") %> <%= recipe.servings %>
-              </div>
-              <div class="card-duration">
-                <%= recipe.duration %>min<%= image_tag('hourglass.svg', size: "30x30", alt: "Duration") %>
-              </div>
-              <% if recipe.favourited?(current_user) %>
-                <div class="card-favourite">
-                  <%= image_tag('full-star.png', size: "30x30", alt: "Favourite") %>
-                </div>
-              <% else %>
-                <div class="card-favourite">
-                  <%= image_tag('empty-star.png', size: "30x30", alt: "Favourite") %>
-                </div>
-              <% end %>
-            </div>
-          <% end %>
-        <% end %>
-      </div>
+      <% @recipes.each do |recipe| %>
+        <div class="col-xs-12 col-sm-6 col-lg-4 index-card">
+          <%= render 'recipes/recipe_card', recipe: recipe, user: current_user %>
+        </div>
+      <% end %>
     </div>
   </div>
 
   <div class="container hidden" id="cont-recipe">
+    <div class="col-xs-12 col-lg-12 offset-lg-1"
+      <%= link_to new_recipe_path do %>
+          <i class="fa fa-plus-square" aria-hidden="true"></i> Add your own recipe
+      <% end %>
+     </div>
     <div class="row">
-      <div class="col-xs-12 col-lg-12 offset-lg-1"
-        <%= link_to new_recipe_path do %>
-            <i class="fa fa-plus-square" aria-hidden="true"></i> Add your own recipe
-        <% end %>
-        <% @user.recipes.each do |recipe| %>
-          <%= link_to recipe_path(recipe) do %>
-            <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.8)), url('<%= cl_image_path(recipe.photo? ? recipe.photo : 'https://kitt.lewagon.com/placeholder/cities/shanghai') %>');">
-              <div class="card-category">
-                <%= recipe.name %>
-              </div>
-              <div class="card-servings">
-                <%= image_tag('cutlery.svg', size: "30x30", alt: "Servings", class: "cut") %> <%= recipe.servings %>
-              </div>
-              <div class="card-duration">
-                <%= recipe.duration %>min<%= image_tag('hourglass.svg', size: "30x30", alt: "Duration") %>
-              </div>
-              <% if recipe.favourited?(current_user) %>
-                <div class="card-favourite">
-                  <%= image_tag('full-star.png', size: "30x30", alt: "Favourite") %>
-                </div>
-              <% else %>
-                <div class="card-favourite">
-                  <%= image_tag('empty-star.png', size: "30x30", alt: "Favourite") %>
-                </div>
-              <% end %>
-            </div>
-          <% end %>
-        <% end %>
-      </div>
+      <% @user.recipes.each do |recipe| %>
+        <div class="col-xs-12 col-sm-6 col-lg-4 index-card">
+          <%= render 'recipes/recipe_card', recipe: recipe, user: current_user %>
+        </div>
+      <% end %>
     </div>
   </div>
 
