fixed card partial

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -61,7 +61,7 @@ $card-margin-top: 20px;
   position: absolute;
   padding: 16px;
   right: 0px;
-
+  z-index: 3;
 }
 .card-category {
     position: absolute;
