--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -13,7 +13,11 @@
     </div>
 
     <div class="card-favourite" id="recipe-<%= @recipe.id %>">
-      <%= render 'favourites/favourite_button', favourite: current_user.favourite_for(@recipe), recipe: @recipe %>
+      <% if current_user %>
+        <%= render 'favourites/favourite_button', favourite: current_user.favourite_for(@recipe), recipe: @recipe %>
+      <% else %>
+        <%= render 'favourites/favourite_button_not_logged_in' %>
+      <% end %>
     </div>
   </div>
 </div>
