styling of new recipe form half done

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,6 +3,7 @@
 @import "avatar";
 @import "card";
 @import "footer";
+@import "form_recipe";
 @import "navbar";
 @import "banner";
 @import "tbs-all";
