--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -2,8 +2,11 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-xs-12" id="cocoon-container">
-      <%= render 'form' %>
+    <div class="col-xs-12 col-sm-6 col-sm-offset-3" id="cocoon-container">
+      <div class="form-post">
+        <h3>Add your recipe</h3>
+        <%= render 'form' %>
+      </div>
     </div>
   </div>
 </div>
